--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,10 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+#logo {
+    max-width: 300px;
+}
+
 .bg-beige {
     background-color: #E5DECB;
 }
