carousel in progress

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -47,6 +47,10 @@
     color: rgb(255, 255, 255);
 }
 
+.semi-grey-bg {
+    background-color: #3636367a;
+}
+
 // Display
 .hidden {
     display: none;
