--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -60,7 +60,7 @@
     background-color: transparent;
 }
 
-.favicon-unchecked {
+.favicon {
     position: absolute;
     top: 2px;
     right: 2px;
