--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -33,14 +33,14 @@
     min-height: 540px;
 }
 
-.bloc-video {
+.video-responsive {
     position: relative;
-    width: 100%;
+    overflow: hidden;
     height: 0;
     padding-bottom: 56.25%;
 }
 
-.video {
+.video-responsive iframe {
     position: absolute;
     top: 0;
     left: 1%;
